--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "dependencies": {
     "@vue/compiler-sfc": "3.0.7",
-    "vue": "3.2.21"
+    "vue": "3.2.21",
+    "vue-router": "4.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "1.1.5",
     "vite": "2.6.14"
+  },
+  "peerDependencies": {
+    "@vue/compiler-sfc": "^3.0.7"
   }
 }
